--- a/index.html
+++ b/index.html
@@ -7,18 +7,64 @@
 </head>
 
     <header>
+        <a>WEBSTUDIO</a>
+   <nav>
+    <ul>
+        <li><a>Studio</a></li>
+        <li><a>Portfolio</a></li>
+        <li><a>Contacts</a></li>
+    </ul>
+   </nav>
+   <address>
+    info@devstudio.com
+    +11 (000) 111-11-11
+   </address>
 
     </header>
 
 <main>
-    <h1>Effective Solutions
+    <h1>Effective Solutions <br />
         for Your Business</h1>
+<button type="=button">Order Service</button>
 <body>
+    <h3>Strategy</h3>
+    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+    <h3>Punctuality</h3>
+    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+    <h3>Diligence</h3>
+    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+    <h3>Technologies</h3>
+    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     
+    <h2>Our Team</h2>
+    <ul>
+      <li>
+        <img src="./images/Product.jpg" width="264" alt="photo Product Designer"/>
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+      </li>  
+      <li>
+        <img src="./images/Frontend.jpg" width="264" alt="photo Frontend Developer"/>
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+      </li>
+      <li>
+        <img src="./images/Marketing.jpg" width="264" alt="photo Marketing"/>
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+      </li>
+      <li>
+        <img src="./images/IU_Designer.jpg" width="264" alt="photo UI Designer"/>
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+      </li>
+    </ul>
+   
 </body>
 
 <footer>
-
+    <a>WEBSTUDIO</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
 </main>
