--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="WEBSTUDIO for business tag content">
     <title>WEBSTUDIO Effective solution for business</title>
 </head>
-
+<body>
     <header>
         <a>WEBSTUDIO</a>
    <nav>
@@ -19,14 +19,12 @@
     info@devstudio.com
     +11 (000) 111-11-11
    </address>
-
     </header>
 
-<main>
-    <h1>Effective Solutions <br />
+   <main>
+    <h1>Effective Solutions
         for Your Business</h1>
-<button type="=button">Order Service</button>
-<body>
+      <button type="button">Order Service</button>
     <h3>Strategy</h3>
     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
     <h3>Punctuality</h3>
@@ -59,13 +57,10 @@
         <p>UI Designer</p>
       </li>
     </ul>
-   
-</body>
-
+   </main>
 <footer>
     <a>WEBSTUDIO</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
-
-</main>
+</body>
 </html>
