--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a>WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
    <nav>
     <ul>
         <li><a>Studio</a></li>
@@ -22,7 +22,7 @@
     </header>
 
    <main>
-    <h1>Effective Solutions
+    <h1>Effective Solutions<br />
         for Your Business</h1>
       <button type="button">Order Service</button>
     <h3>Strategy</h3>
@@ -59,7 +59,7 @@
     </ul>
    </main>
 <footer>
-    <a>WEBSTUDIO</a>
+    <a href="./index.html">WEBSTUDIO</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
