--- a/index.html
+++ b/index.html
@@ -1,66 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="WEBSTUDIO for business tag content">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="WEBSTUDIO for business tag content" />
     <title>WEBSTUDIO Effective solution for business</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="./index.html">WEBSTUDIO</a>
-   <nav>
-    <ul>
-        <li><a>Studio</a></li>
-        <li><a>Portfolio</a></li>
-        <li><a>Contacts</a></li>
-    </ul>
-   </nav>
-   <address>
-    info@devstudio.com
-    +11 (000) 111-11-11
-   </address>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>info@devstudio.com</li>
+          <li>+11 (000) 111-11-11</li>
+        </ul>
+      </address>
     </header>
 
-   <main>
-    <h1>Effective Solutions<br />
-        for Your Business</h1>
-      <button type="button">Order Service</button>
-    <h3>Strategy</h3>
-    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-    <h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-    <h3>Diligence</h3>
-    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-    <h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-    
-    <h2>Our Team</h2>
-    <ul>
-      <li>
-        <img src="./images/Product.jpg" width="264" alt="photo Product Designer"/>
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-      </li>  
-      <li>
-        <img src="./images/Frontend.jpg" width="264" alt="photo Frontend Developer"/>
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-      </li>
-      <li>
-        <img src="./images/Marketing.jpg" width="264" alt="photo Marketing"/>
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-      </li>
-      <li>
-        <img src="./images/IU_Designer.jpg" width="264" alt="photo UI Designer"/>
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-      </li>
-    </ul>
-   </main>
-<footer>
-    <a href="./index.html">WEBSTUDIO</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</footer>
-</body>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <h3>Strategy</h3>
+      <p>
+        Our goal is to identify the business problem to walk away with the
+        perfect and creative solution.
+      </p>
+      <h3>Punctuality</h3>
+      <p>
+        Bring the key message to the brand's audience for the best price within
+        the shortest possible time.
+      </p>
+      <h3>Diligence</h3>
+      <p>
+        Research and confirm brands that present the strongest digital growth
+        opportunities and minimize risk.
+      </p>
+      <h3>Technologies</h3>
+      <p>
+        Design practice focused on digital experiences. We bring forth a deep
+        passion for problem-solving.
+      </p>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Product.jpg"
+              width="264"
+              alt="photo Product Designer"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Frontend.jpg"
+              width="264"
+              alt="photo Frontend Developer"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Marketing.jpg"
+              width="264"
+              alt="photo Marketing"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/IU_Designer.jpg"
+              width="264"
+              alt="photo UI Designer"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a>WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
