--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </nav>
       <address>
         <ul>
-          <li>info@devstudio.com</li>
-          <li>+11 (000) 111-11-11</li>
+          <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -28,17 +28,20 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <h3>Strategy</h3>
+      <section>
+        <h2>Why WebStudio</h2>
+        <ul>
+      <li><h3>Strategy</h3>
       <p>
         Our goal is to identify the business problem to walk away with the
         perfect and creative solution.
-      </p>
-      <h3>Punctuality</h3>
+      </p></li>
+      <li><h3>Punctuality</h3>
       <p>
         Bring the key message to the brand's audience for the best price within
         the shortest possible time.
-      </p>
-      <h3>Diligence</h3>
+      </p></li>
+      <li><h3>Diligence</h3>
       <p>
         Research and confirm brands that present the strongest digital growth
         opportunities and minimize risk.
@@ -47,7 +50,9 @@
       <p>
         Design practice focused on digital experiences. We bring forth a deep
         passion for problem-solving.
-      </p>
+      </p></li>
+    </ul>
+    </section>
       <section>
         <h2>Our Team</h2>
         <ul>
