--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+
       <section>
         <h2>Why WebStudio</h2>
         <ul>
@@ -45,8 +46,8 @@
       <p>
         Research and confirm brands that present the strongest digital growth
         opportunities and minimize risk.
-      </p>
-      <h3>Technologies</h3>
+      </p></li>
+    <li><h3>Technologies</h3>
       <p>
         Design practice focused on digital experiences. We bring forth a deep
         passion for problem-solving.
@@ -96,7 +97,7 @@
       </section>
     </main>
     <footer>
-      <a>WEBSTUDIO</a>
+      <ahref="./index.html">WebStudio</ahref=>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
